mik changes down to 1.3.6 changed ihs calc to be that of selscan

--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -126,8 +126,8 @@ tibble(
 
 ### Macroevolutionary methods
 
-#### Ka/Ks
-The ratio of non-synonymous to synonymous mutations is called the Ka/Ks ratio or dN/dS ratio as it is often referred to, is used to infer functional impact from selection, since synonymous mutations are thought of as silent mutations with a neutral effect on the protein [@Hughes1988]. Comparing the baseline rate of mutation (synonymous) to the non-synonymous rate gives an understanding of the tolerance of amino acid alternatives in the protein, with an excess of non-synonymous mutations indicating the novel protein structures are being favoured and the protein is being positively selected for. A Ka/Ks ratio greater than 1 is indicative of positive selection, while a value less than 1 is indicative of negative selection against deleterious mutations and for keeping the protein conserved.
+#### K~a~/K~s~
+The ratio of non-synonymous to synonymous mutations is called the K~a~/K~s~ ratio (or dN/dS ratio as it is often referred to), and is used to infer functional impact from selection, since synonymous mutations are thought of as silent mutations with a neutral effect on the protein [@Hughes1988]. Comparing the baseline rate of mutation (synonymous) to the non-synonymous rate gives an understanding of the tolerance of amino acid alternatives in the protein, with an excess of non-synonymous mutations indicating the novel protein structures are being favoured and the protein is being positively selected for. A Ka/Ks ratio greater than 1 is indicative of positive selection, while a value less than 1 is indicative of negative selection against deleterious mutations and for keeping the protein conserved.
 
 #### HKA
 
@@ -135,27 +135,26 @@ The HKA test [@Hudson1987] compares between and within populations the polymorph
 
 ### Haplotypic methods
 
-There are a few methods that are different derivations and applications of looking at haplotype decay around a core \gls{snp}. @sabeti2006positive put forward the concept of using \gls{ehh}. The haplotypes that had unusually long haplotype homozygosity and a high frequency in the population indicated that the polymorphism had risen in prominence faster than it would be expected under the neutral model and therefore under selection. The main concept is that a beneficial mutation wouldn't solely be selected for, but the surrounding region would initially be selected and therefore have a conservation effect. As time and generations progressed this haplotype would decay due to recombination and this haplotype decay can be used to assist in the ageing of the selection event. In order to use haplotypic methods, there is a requirement to establish the alleles that were inherited from the maternal side and those that were inherited from the paternal side making the two haplotypes (phasing).
+There are a few methods that are different derivations and applications of looking at haplotype decay around a core \gls{snp}. @sabeti2006positive put forward the concept of using \gls{ehh}. The haplotypes that had unusually long haplotype homozygosity and a high frequency in the population indicated that the polymorphism had risen in prominence faster than it would be expected under the neutral model and therefore under selection. The main concept is that a beneficial mutation wouldn't solely be selected for, but the surrounding region would initially be selected and therefore have a conservation effect. As time and generations progressed, this haplotype would decay due to recombination, and this haplotype decay can be used to assist in the ageing of the selection event. In order to use haplotypic methods, there is a requirement to establish the alleles that were inherited from the maternal side and those that were inherited from the paternal side making the two haplotypes (phasing).
 
 #### Integrated haplotype homozygosity score
 
-\glsdesc{ihs} [@voight2006map] starts with \gls{ehh} which is the probability that 2 chromosomes are carrying a core haplotype are homogenous to the distance x, 0 is no homozygosity meaning all haplotypes are different, 1 is complete homozygosity  meaning all haplotypes are the same. The \gls{ehh} value versus distance is integrated to find the area under \gls{ehh} curve until \gls{ehh} decays to 0.05. This \gls{ihh} is calculated based on the ancestral or derived allele and annotated as \gls{ihh}_A_ or \gls{ihh}_D_. The unstandardised \gls{ihs} is calculated in equation \@ref(eq:ihs). Standardisation of \gls{ihs} is shown in equation \@ref(eq:stdihs), where the expectations and standard deviation of equation \@ref(eq:ihs) are estimated from the empirical distribution of SNPs whose derived allele frequency p matches the frequency at the core \gls{snp}[@voight2006map]. Large positive values indicate long haplotypes carrying the ancestral allele. \Gls{ihs} identifies variants under selection driven to intermediate frequencies.
+The \gls{ihs} [@voight2006map; @Szpiech2014] calculation starts with \gls{ehh}, which is the probability that 2 chromosomes carrying a core haplotype are homogenous to the distance $x$. A value of 0 represents no homozygosity, meaning all haplotypes are different, while a value of 1 is complete homozygosity  meaning all haplotypes are the same. The \gls{ehh} value versus distance is integrated to find the area under \gls{ehh} curve until \gls{ehh} decays to 0.05. This \gls{ihh} is calculated based on the ancestral or derived allele and annotated as \gls{ihh}~A~ or \gls{ihh}~D~. The unstandardised \gls{ihs} is calculated in equation \@ref(eq:ihs), which is the \texttt{selscan} version [@Szpiech2014]. Standardisation of \gls{ihs} is shown in equation \@ref(eq:stdihs), where the expectations and standard deviation of equation \@ref(eq:ihs) are estimated from the empirical distribution of SNPs whose derived allele frequency p matches the frequency at the core \gls{snp}[@voight2006map]. Large positive values indicate long haplotypes carrying the derived allele, whereas negative values indicate haplotypes carrying the ancestral allele. The calculation in @voight2006map has \gls{ihh}~A~ and \gls{ihh}~D~ switched. The @Szpiech2014 \gls{ihs} calculation is used in this thesis (equations \@ref(eq:ihs) and \@ref(eq:stdihs)). \Gls{ihs} identifies variants under selection driven to intermediate frequencies.
 
 \begin{equation} 
-iHS_{unstd} = \ln{\frac{iHH_A}{iHH_D}}
+iHS_{unstd} = \ln{\frac{iHH_D}{iHH_A}}
 (\#eq:ihs)
 \end{equation}
 
 \begin{equation} 
-iHS_{std} = \ln{\frac{iHH_A}{iHH_D}} - \frac{E_p [\ln{\frac{iHH_A}{iHH_D}}] }{ SD_p [\ln{\frac{iHH_A}{iHH_D}}] }
+iHS_{std} = \ln{\frac{iHH_D}{iHH_A}} - \frac{E_p [\ln{\frac{iHH_D}{iHH_A}}] }{ SD_p [\ln{\frac{iHH_D}{iHH_A}}] }
 (\#eq:stdihs)
 \end{equation}
 
 
 #### Cross population extended haplotype homozygosity
 
-\Gls{xpehh}, created by @tang2007new, is also known as Rsb. \Gls{xpehh} was designed for use with \gls{snp} data rather than sequence. \Gls{xpehh} lacks power to detect intermediate frequency variants but is designed to detect variants that are near fixation or completely fixed. The \gls{ehh} of \gls{snp} site (EHHS), integrates to sum the area under the decay by distance in \gls{ehh} (iHH) which is then used as a log ratio between populations at a single site (equation \@ref(eq:xpehh)) and in a standardised form (equation \@ref(eq:xpehhstd)). Recombination rate is mostly conserved within populations so provides an internal control in \gls{xpehh} for effects of heterogeneous 
-recombination rates. Extreme values of \gls{xpehh} indicate a slower decay of \gls{ehh} in one population compared to the other. \Gls{xpehh} relies on the breakdown of \gls{ld} over time and has weak power to detect selective sweeps that were historical and ended thousands of generations ago [@Chen2010]. F~ST~ is better than \gls{xpehh} for differential selection between closely related populations because haplotype-based signals are mostly shared between geographically similar populations [@pickrell2009signals]. 
+\Gls{xpehh}, created by @tang2007new, is also known as Rsb. \Gls{xpehh} was designed for use with \gls{snp} data rather than sequence. \Gls{xpehh} lacks power to detect intermediate frequency variants but is designed to detect variants that are near fixation or completely fixed. The \gls{ehh} of \gls{snp} site (EHHS), integrates to sum the area under the decay by distance in \gls{ehh} (iHH) which is then used as a log ratio between populations at a single site (equation \@ref(eq:xpehh)) and in a standardised form (equation \@ref(eq:xpehhstd)). Recombination rate is mostly conserved within populations so provides an internal control in \gls{xpehh} for effects of heterogeneous recombination rates. Extreme values of \gls{xpehh} indicate a slower decay of \gls{ehh} in one population compared to the other. \Gls{xpehh} relies on the breakdown of \gls{ld} over time and has weak power to detect selective sweeps that were historical and ended thousands of generations ago [@Chen2010]. F~ST~ is better than \gls{xpehh} for differential selection between closely related populations because haplotype-based signals are mostly shared between geographically similar populations [@pickrell2009signals]. 
 
 \begin{equation} 
  XPEHH_{unstd} = \ln{\frac{iHH_A}{iHH_B}}
@@ -173,11 +172,11 @@ recombination rates. Extreme values of \gls{xpehh} indicate a slower decay of \g
 
 ### Frequency spectrum methods
 
-The frequency spectrum methods are based on finding deviations in the frequency spectra of alleles that would be outside of what would be expected under neutrality. These can involve an increase in particular types of frequencies such as low, intermediate, high variant frequencies, or a difference in allele frequencies between populations. 
+The frequency spectrum methods are based on finding deviations in the frequency spectra of alleles that are outside of what would be expected under neutrality. These can involve an increase in particular types of frequencies such as low, intermediate, high variant frequencies, or a difference in allele frequencies between populations. 
 
 #### Tajima's _D_
 
-\gls{td} [@Tajima1989] counts the number of segregating sites of individuals in a population and finds the ratio between polymorphisms and pair-wise individual comparisons. \gls{td} is a test of the neutral hypothesis. The hypothesis is rejected when there is an excess of low frequency variants. A negative \gls{td} is indicative of positive selection or weak negative selection but a negative value can also be attributed to population events such as population expansion. Positive values of \gls{td} indicate an excess of intermediate frequency variants. An excess of intermediate frequency variants could also be attributed to balancing selection, population structure, or population bottlenecks [@Kreitman2000; @Nielsen2005; @nielsen2007recent]. The comparison of other polymorphisms, such as changes in \glspl{snp} versus changes in \gls{indel} numbers can provide further evidence for either selection or a population event, since population events should affect both \glspl{snp} and \glspl{indel} in an equal fashion. The direction of \gls{td} after a population bottleneck depends on the strength and duration of the bottleneck and can generate similar \gls{td} values that can be positive, negative or zero [@Fay1999]. After a population reduction or selective event it is expected the population will have excess rare alleles (recent, low frequency) as the population recovers, therefore \gls{td} will be negative [@Barton1998]. \gls{td} is sensitive to sequencing errors because they appear equivalent to low frequency variants [@Achaz2008].
+\gls{td} [@Tajima1989] counts the number of segregating sites of individuals in a population and finds the ratio between polymorphisms and pair-wise individual comparisons. \gls{td} is a test of the neutral hypothesis. The hypothesis is rejected when there is an excess of low frequency variants. A negative \gls{td} is indicative of positive selection or weak negative selection but a negative value can also be attributed to population events such as population expansion. Positive values of \gls{td} indicate an excess of intermediate frequency variants. An excess of intermediate frequency variants could also be attributed to balancing selection, population structure, or population bottlenecks [@Kreitman2000; @Nielsen2005; @nielsen2007recent]. The comparison of other polymorphisms, such as changes in \glspl{snp} versus changes in \gls{indel} numbers can provide further evidence for either selection or a population event, since population events should affect both \glspl{snp} and \glspl{indel} in an equal fashion. The direction of \gls{td} after a population bottleneck depends on the strength and duration of the bottleneck and can generate similar \gls{td} values, and can be positive, negative or zero [@Fay1999]. After a population reduction or selective event it is expected the population will have excess rare alleles (recent, low frequency) as the population recovers, therefore \gls{td} will be negative [@Barton1998]. \gls{td} is sensitive to sequencing errors that are called as \glspl{snp} because they appear equivalent to low frequency variants [@Achaz2008].
 
 #### Fu and Li's and F
 
@@ -193,43 +192,45 @@ The frequency spectrum methods are based on finding deviations in the frequency 
 
 In contrast to \gls{fwh} and \gls{td}, which compare either high or low frequency variants with intermediate frequency variants, \gls{ze} compares the low and high frequency variants [@Zeng2006]. After a selective sweep, the lower frequency variants are expected to 'bounce back' faster than the higher frequency variants. The _E_ test is not sensitive to population subdivision. A negative value for \gls{ze} is indicative of a selective sweep, but a rapid population expansion can also produce a negative value.
 
+<!-- Why is it not sensitive to population subdivision? -->
+
 <!-- > equation? -->
 
 <!-- > @Ferretti2017 explains how to interpret in the the form of trees -->
 
 #### F~ST~
 
-F~ST~ is a population differentiation metric that measures the differences in heterogeneity of a sub-population compared to a global population. Initially created by @Wright1951, as an inbreeding coefficient for inbreeding as a whole in a population (equation \@ref(eq:fst)), where F~IT~ is the inbreeding coefficient for the individual in the total population and F~IS~ is the inbreeding coefficient for inbreeding of the individual in the subpopulation. These fixation indices are ways of summarising population structure. Selection will act to drive an allele to fixation, whereas immigration usually reduces the frequency. When the selective advantage is strong, selection will be the dominant force on the locus, however, when the selective advantage is weak the allele will reduce in frequency and disappear. Cockerham [@Cockerham1969; @Cockerham1973] equated $\theta$ (population genetic differentiation) with F~ST~ and so now F~ST~ was not just for population structure but differentiation. The fixation indices were further developed by @Weir1984 to add weightings in the calculation for population sizes. F~ST~ values fall between 0 and 1, each represents the fixation of an allele. Large differences in F~ST~ values are indicative of population differentiation, suggesting directional selection at that locus, whereas small differences in F~ST~ indicates that the populations are similar. F~ST~ can have high variation in neighbouring loci under neutrality [@Weir2005]. Unless populations are closely related such as Northwest and south-east Europeans [@Price2008a], the noise will drown out the signal and identification of genome-wide significance in F~ST~ will be difficult. @Weir2005 suggested taking a sliding window approach to help improve the signal to noise ratio.
+F~ST~ is a population differentiation metric that measures the differences in heterogeneity of a sub-population compared to a global population. Initially created by @Wright1951, as an inbreeding coefficient for inbreeding as a whole in a population (equation \@ref(eq:fst)), F~IT~ is the inbreeding coefficient for the individual in the total population and F~IS~ is the inbreeding coefficient for inbreeding of the individual in the subpopulation. These fixation indices provide ways of summarising population structure. Selection will act to drive an allele to fixation, whereas immigration usually reduces the frequency. When the selective advantage is strong, selection will be the dominant force on the locus, however, when the selective advantage is weak the allele will reduce in frequency and disappear. Cockerham [-@Cockerham1969; -@Cockerham1973] equated $\theta$ (population genetic differentiation) with F~ST~, extending F~ST from calculating population structure to population differentiation too. The fixation indices were further developed by @Weir1984 to add population size weightings to the calculation. F~ST~ values fall between 0 and 1, each representing the fixation of an allele. Large differences in F~ST~ values are indicative of population differentiation, suggesting directional selection at that locus, whereas small differences in F~ST~ indicate that the populations are similar. F~ST~ can have high variation in neighbouring loci under neutrality [@Weir2005]. Unless populations are closely related, such as Northwest and south-east Europeans [@Price2008a], the noise will drown out the signal, and identification of genome-wide significance in F~ST~ will be difficult. @Weir2005 suggested taking a sliding window approach to help improve the signal to noise ratio.
 
 \begin{equation} 
 F_{ST} = \frac{F_{IT}{-}F_{IS}}{1{-}F_{IS}}
 (\#eq:fst)
 \end{equation}
 
-F~ST~ has been used in multiple studies as evidence for natural selection [@Akey2012; @myles2007identification; @pickrell2009signals]. @Akey2012 used F~ST~ at individual loci and compared this to the distributions for the genome, chromosome and gene levels. The use of the empirical distribution to compare to F~ST~ for each \gls{snp} controlled for the effects of demography. F~ST~ as a method for detecting selection was developed further into d_i_, which is a function of pair-wise F~ST~ between population i and the remaining populations [@Akey2010]. Outside of the human context F~ST~ has been a very popular method of reporting both population structure and evidence of selection [@Akey2010; @Hancock2011; @Qanbari2011; @Wei2015b]. Population branching statistic is a F~ST~ based statistic that involves the use of an out-group to compare estimates in divergence time between populations [@Yi2010b].
+F~ST~ has been used in multiple studies as evidence for natural selection [@Akey2012; @myles2007identification; @pickrell2009signals]. @Akey2012 used F~ST~ at individual loci and compared this to the distributions for the genome, chromosome and gene levels. The use of the empirical distribution to compare to F~ST~ for each \gls{snp} controlled for the effects of demography. F~ST~ as a method for detecting selection was developed further into d$i$, which is a function of pair-wise F~ST~ between population $i$ and the remaining populations [@Akey2010]. Outside of the human context F~ST~ has been a very popular method of reporting both population structure and evidence of selection [@Akey2010; @Hancock2011; @Qanbari2011; @Wei2015b]. The population branching statistic is a F~ST~ based statistic that involves the use of an out-group to compare estimates in divergence time between populations [@Yi2010b].
 
-#### Population branching statistic
+<!-- #### Population branching statistic -->
 
 #### Selection by conditional coalescent tree
 
-Selection by conditional coalescent tree (SCCT; @Wang2014) detects recent positive selection by searching for an imbalance of genetic variants and conditions these on the allele frequencies of the candidate loci. SCCT pinpoints the causal variant more accurately by using a method that is based on the conditional coalescent tree method from @Wiuf1999, where haplotypes are partitioned into two subgroups according to the allelic state at a particular locus, it is assumed one subgroup carries the derived allele at the particular locus and the other subgroup carries the ancestral allele. The coalescence of a sample of haplotypes conditioning on the particular mutation means each group should coalesce together individually before the two subgroups coalesce. This is a similar idea to that of extended haplotype homozygosity used by \gls{ihs} and the results of \gls{ihs} and SCCT tends to be similar. The selection statistic (S) is based on comparing the lineage lengths of the two groups. Under neutrality S approaches $\theta$, with significant departures from $\theta$ being considered evidence of positive selection. When natural selection has a strong hitch hiking effect on a selectively favoured allele, SCCT (and \gls{ihs}) is more powerful than \gls{td}, Fay and Wu’s _H_, and measuring change in derived allele frequency (see \@ref(dafsection)). In most cases the power of SCCT is equivalent to \gls{ihs} except when selection is very strong, in which case \gls{ihs} has more power [@Wang2014]. The power of SCCT can be improved by increasing the sample size. SCCT performs moderately to population demographic events (such as bottlenecks) and out performs \gls{td} and \gls{ihs} in false discovery rate, but \gls{fwh} performed the best [@Wang2014].
+\Gls{scct} (@Wang2014) detects recent positive selection by searching for an imbalance of genetic variants and conditions these on the allele frequencies of the candidate loci. \gls{scct} pinpoints the causal variant more accurately by using a method that is based on the conditional coalescent tree method from @Wiuf1999, where haplotypes are partitioned into two subgroups according to the allelic state at a particular locus. It is assumed one subgroup carries the derived allele at the locus and the other subgroup carries the ancestral allele. The coalescence of a sample of haplotypes conditioning on the particular mutation means each group should coalesce together individually before the two subgroups coalesce. This is a similar idea to that of \gls{ehh} used by \gls{ihs}, and the results of \gls{ihs} and \gls{scct} tends to be similar. The selection statistic (S) is based on comparing the lineage lengths of the two groups. Under neutrality S approaches $\theta$, with significant departures from $\theta$ being considered evidence of positive selection. When natural selection has a strong hitch hiking effect on a selectively favoured allele, \gls{scct} (and \gls{ihs}) is more powerful than \gls{td}, Fay and Wu’s _H_, and measuring change in derived allele frequency (see \@ref(dafsection)). In most cases the power of \gls{scct} is equivalent to \gls{ihs} except when selection is very strong, in which case \gls{ihs} has more power [@Wang2014]. The power of \gls{scct} can be improved by increasing the sample size. \gls{scct} performs moderately to population demographic events (such as bottlenecks) and out performs \gls{td} and \gls{ihs} in false discovery rate, but \gls{fwh} performed the best [@Wang2014].
 
 #### Change in derived allele frequency {#dafsection}
 
-Similar to F~ST~, \gls{ddaf} looks at population differentiation. The derived allele is determined through the use of an ancestral out-group such as chimpanzees when used in human populations. \gls{ddaf} measures the absolute difference in the derived allele frequency between two populations [@Grossman2010] and has greater power to detect sweeps, both partial and complete, and outperforms \gls{xpehh} for partial sweeps [@Colonna2014]. \gls{ddaf} was originally part of the composite of multiple sites statistic [@Grossman2010] but has also been used as a standalone metric in humans [@Colonna2014; @Gudbjartsson2015] and in other species such as cattle [@Randhawa2014] to measure differentiation.
+Similar to F~ST~, \gls{ddaf} looks at population differentiation. The derived allele is determined through the use of an ancestral out-group such as chimpanzees when used in human populations. \gls{ddaf} measures the absolute difference in the derived allele frequency between two populations [@Grossman2010] and has greater power to detect sweeps, both partial and complete, and outperforms \gls{xpehh} for partial sweeps [@Colonna2014]. \gls{ddaf} was part of the composite of multiple sites statistic [@Grossman2010] but has also been used as a standalone metric in humans [@Colonna2014; @Gudbjartsson2015] and in other species such as cattle [@Randhawa2014] to measure differentiation.
 
 ### Composite methods
 
-Composite methods are combine multiple methods with the goal to increase overall power and/or spatial resolution for detecting selection. The combination of methods also gives greater resilience to demographic events.
+Composite methods combine multiple methods with the goal of increasing overall power and/or spatial resolution for detecting selection. The combination of methods also gives greater resilience against demographic events.
 
 #### Composite likelihood ratio
 
 The \gls{clr}, created by @Kim2002, is a test for local
-hitch-hiking selection along a recombining chromosome. It calculates a null distribution of variation from neutral coalescent simulations involving recombination and uses this to calculate the probability of observing a threshold ratio of segregating variants. The @Nielsen2005a version of \gls{clr} is similar to Kim and Stephan's test but creates the null distribution from the data itself, instead of using the neutral population model. A key consideration for the use of \gls{clr} is that it is very sensitive to \gls{snp} ascertainment bias [@Chen2010].
+hitch-hiking selection along a recombining chromosome. It calculates a null distribution of variation from neutral coalescent simulations involving recombination, and uses this to calculate the probability of observing a threshold ratio of segregating variants. The @Nielsen2005a version of \gls{clr} is similar to Kim and Stephan's test but creates the null distribution from the data itself, instead of using the neutral population model. A key consideration for the use of \gls{clr} is that it is very sensitive to \gls{snp} ascertainment bias [@Chen2010].
 
 #### Cross population composite likelihoods ratio
 
-The cross population composite likelihoods ratio (XP-CLR) is an extension of the \gls{clr} test developed by @Nielsen2009 that scans for multi-locus allele frequency differentiation between two populations and then tests if these frequency differences are too young to be consistent with neutrality based on the \gls{ld} on the region [@Chen2010]. A down-weighting of \glspl{snp} that are in perfect or high \gls{ld} is performed because they essentially provide the same information. By doing this it is hoped that false positives are reduced, since the correlation of marginal likelihood terms in the composite likelihood function is often overlooked and leads to false positives. Normalised XP-CLR scores should be resistant to variation in demographic events, however a conservative approach of using rank-order of scores across the genome is usually taken. Unlike single population \gls{clr} and similar to \gls{xpehh}, XP-CLR is resistant to \gls{snp} ascertainment bias because population differentiation is not affected by ascertainment bias. There is also a strong correlation between genes identified with XP-CLR and \gls{xpehh}. XP-CLR is also considered an extension of F~ST~ and is beginning to be used as a replacement for investigating selection in animal studies (Cattle – @Lee2014; Goats - @Benjelloun2015)
+The cross population composite likelihoods ratio (XP-CLR) is an extension of the \gls{clr} test developed by @Nielsen2009 that scans for multi-locus allele frequency differentiation between two populations and then tests if these frequency differences are too recent to be consistent with neutrality based on the \gls{ld} on the region [@Chen2010]. A down-weighting of \glspl{snp} that are in perfect or high \gls{ld} is performed because they essentially provide the same information. By doing this it is hoped that false positives are reduced, since the correlation of marginal likelihood terms in the composite likelihood function is often overlooked and leads to false positives. Normalised XP-CLR scores should be resistant to variation in demographic events, however a conservative approach of using rank-order of scores across the genome is usually taken. Unlike single population \gls{clr} and similar to \gls{xpehh}, XP-CLR is resistant to \gls{snp} ascertainment bias because population differentiation is not affected by ascertainment bias. There is also a strong correlation between genes identified with XP-CLR and \gls{xpehh}. XP-CLR is also considered an extension of F~ST~ and is beginning to be used as a replacement for investigating selection in animal studies (e.g. Cattle – @Lee2014; Goats - @Benjelloun2015)
 
 #### Composite of multiple signals
 
@@ -237,7 +238,7 @@ Composite of Multiple Signals (CMS) is a combination metric composed of \gls{ihs
 
 #### Meta-analysis of multiple tests
 
-Meta-analysis of Multiple Tests (meta-SS; @Utsunomiya2013; @Utsunomiya2015) is only able to combine selection statistics that generate P-values. It uses an adapted version of a weighted  Stouffer method to combine Z-transformed P-values. For each marker from each test _i_ the respective P-value is transformed into a Z score by Z~i~ = - $\phi$ -1(1 - $\pi$), where $\phi$ is the normal cumulative density function. Each test is weighted (w~i~) to 1/n where n is the number of comparisons. The combined statistic of k tests, for each \gls{snp} in each population is defined in equation \@ref(eq:metass).
+Meta-analysis of Multiple Tests (meta-SS; @Utsunomiya2013; @Utsunomiya2015) is only able to combine selection statistics that generate P-values. It uses an adapted version of a weighted  Stouffer method to combine Z-transformed P-values. For each marker from each test _i_ the respective P-value is transformed into a Z score by Z~i~ = - $\phi$ -1(1 - $\pi$), where $\phi$ is the normal cumulative density function. Each test is weighted (w~i~) to 1/n where n is the number of comparisons. The combined statistic of $k$ tests, for each \gls{snp} in each population is defined in equation \@ref(eq:metass).
 
 \begin{equation} 
 meta\-SS = \frac{\sum\limits_{i =1}^k {\omega_i Z_i}}{\sqrt{\sum\limits_{i =1}^k {\omega_i}^2}}
@@ -247,13 +248,13 @@ meta\-SS = \frac{\sum\limits_{i =1}^k {\omega_i Z_i}}{\sqrt{\sum\limits_{i =1}^k
 
 #### Composite selection signals
 
-Composite of Selection Signals is similar to meta-SS, where by it is a method for combining the results from multiple selection tests but is not limited to tests that produce P-values [@Randhawa2014]. CSS currently uses F~ST~, \gls{xpehh}, and \gls{ddaf} or change in selected allele frequency and combines them by taking the test statistic for each method across each \gls{snp}(1,…,n) then obtaining the rank of each statistic across each \gls{snp}(1 … n) and converting these into fractional ranks so they lie between 0 and 1, that is, 1/(n+1) to n/(n+1). By doing this the magnitudes of the original statistics are not used, thus increasing the robustness. The fractional ranks are converted to Z-statistics and the average z-values are calculated at each \gls{snp} position. P-values are obtained from the distribution of the means with the -log10(p) being the CSS value. The CSS is plotted against genomic position with an excess in CSS showing a common signal between the multiple test statistics.
+\gls{css} is similar to meta-SS, in that it is a method for combining the results from multiple selection tests but is not limited to tests that produce P-values [@Randhawa2014]. \gls{css} currently uses F~ST~, \gls{xpehh}, and \gls{ddaf} or change in selected allele frequency, and combines them by taking the test statistic for each method across each \gls{snp}(1,…,n) then obtaining the rank of each statistic across each \gls{snp}(1 … n) and converting these into fractional ranks so they lie between 0 and 1, that is, 1/(n+1) to n/(n+1). By doing this the magnitudes of the original statistics are not used, thus increasing the robustness. The fractional ranks are converted to Z-statistics and the average z-values are calculated at each \gls{snp} position. P-values are obtained from the distribution of the means with the -log10(p) being the \gls{css} value. The \gls{css} is plotted against genomic position with an excess in \gls{css} showing a common signal between the multiple test statistics.
 
 ### Power
 
-Power to detect selected sites can be very limited if the site is not an outlier from empirical methods [@Teshima2006]. A key consideration when selecting a particular method for detecting selection is the limitations the method has on power to detect a selective event such as starting and final allele frequency of the variant after a sweep. \gls{td} is most powered for low and intermediate frequency variants [@Simonsen1995] whereas \gls{fwh} is most powered for intermediate and high frequency variants.  Some methods such as \gls{ihs}, are good for detection of middle frequency variants. \Gls{xpehh}, on the other hand is most powered at the fixation ends of the spectrum. \gls{xpehh}, because it is correlated with \gls{ld}, lacks power to detect ancient selective events [@Chen2010].  Sample size is another factor to consider. \Gls{ihs} has modest reduction of power when reducing samples until approximately 40 chromosomes. \gls{xpehh} can maintain power to about 20 chromosomes, so long as the reference population is a fixed size. The grouping of similar genetic populations may be an option to increase power with low sample sizes [@pickrell2009signals]). For F~ST~, power to detect selection should be sufficient if samples > 1/F~ST~ [@Bhatia2013a; @Bhatia2011]
+Power to detect selected sites can be very limited if the site is not an outlier from empirical methods [@Teshima2006]. A key consideration when selecting a particular method for detecting selection is the limitations the method has on power to detect a selective event, such as starting and final allele frequency of the variant after a sweep. \gls{td} is powered for low and intermediate frequency variants [@Simonsen1995] whereas \gls{fwh} is powered for intermediate and high frequency variants. Some methods such as \gls{ihs}, are good for detection of middle frequency variants. \Gls{xpehh}, on the other hand is powered at the fixation ends of the spectrum. \gls{xpehh}, because it is correlated with \gls{ld}, lacks power to detect ancient selective events [@Chen2010].  Sample size is another factor to consider. \Gls{ihs} has modest reduction of power when reducing samples until approximately 40 samples of single chromosomes. \gls{xpehh} can maintain power down to about 20 samples of single chromosomes, so long as the reference population is a fixed size. The grouping of similar genetic populations may be an option to increase power with low sample sizes [@pickrell2009signals]). For F~ST~, power to detect selection should be sufficient if samples > 1/F~ST~ [@Bhatia2013a; @Bhatia2011]
 
-Power of a statistic also needs to be considered for the type of selective sweep that may have occurred, such is the case with \gls{nsl}, which has similar power to detect selection to \gls{ihs}, but performs better for larger starting allele frequencies. It also outperforms \gls{ihs} in power in both hard and soft sweep scenarios [@Ferrer-Admetlla2014]. When it comes to picking up demographic events, haplotype tests are useful at detecting recent and more moderate bottlenecks, frequency spectrum tests (such as \gls{fwh}/ \gls{td}) have best power for detecting moderately old severe bottlenecks [@Depaulis2003]. Whereas \gls{ze} and \gls{flf} have the most power during population expansion [@Zeng2006;@Ramirez-Soriano2008].
+Power of a statistic also needs to be considered for the type of selective sweep that may have occurred, such is the case with \gls{nsl}, which has similar power to detect selection to \gls{ihs}, but performs better for larger starting allele frequencies. It also outperforms \gls{ihs} in power in both hard and soft sweep scenarios [@Ferrer-Admetlla2014]. When it comes to picking up demographic events, haplotype tests are useful at detecting recent and more moderate bottlenecks, frequency spectrum tests (such as \gls{fwh}/ \gls{td}) have the best power for detecting moderately old severe bottlenecks [@Depaulis2003], whereas \gls{ze} and \gls{flf} have the most power during population expansion [@Zeng2006;@Ramirez-Soriano2008].
 
 ### Challenges
 
